[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "happyly"
author = "Alexander Tsukanov"
author-email = "aliaksandr.tsukanau@itechart-group.com"
home-page = "https://github.com/equeumco/happyly"
description-file = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Object Brokering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
keywords = "google pubsub"
requires = [
    "attrs>=18.2",
    "google-cloud-pubsub>=0.37.2",
    "marshmallow>=2.15,<3",
    "redis>=3.0",
]
requires-python = ">=3.6"

[tool.flit.metadata.requires-extra]
# these are special extras for flit
dev = [
    "bump2version>=0.5.10",  # use bump2version while bumpversion project is inactive
    "pre-commit>=1.14.4",
]
test = ["pytest>=4.3.0", "tox>=3.7.0"]

[tool.flit.metadata.urls]
Documentation = "https://github.com/equeumco/happyly/blob/master/Tutorial.ipynb"

[tool.black]
line-length = 88
py36 = true
