[flake8]
max-line-length = 88
# E203 conflicts with Black:
# https://black.readthedocs.io/en/stable/the_black_code_style.html#slices
ignore = E203

[metadata]
keywords =
    messaging
    separation of concerns
    serialization
    marshmallow
    google pubsub
    celery

[tool:pytest]
testpaths = tests

[tox:tox]
envlist = py36, py37
# we use flit
skipsdist = True

[testenv]
deps = flit
commands =
    flit install --deps production --extras test
    py.test --basetemp={envtmpdir} {posargs}

